--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,3 @@
-1.1 - Preacher - MM/DD/YYYY
+1.1 - Preacher - 2015/08/16
 	- Fixed bug when setting callback "all"
 	- Fixed bug in _from parameter on PRIVMSG
