--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
-1.1 - Preacher - 2015/08/16
+1.1 - Preacher - 2015/07/16
 	- Fixed bug when setting callback "all"
 	- Fixed bug in _from parameter on PRIVMSG
+
+1.2 - Preacher - YYYY/MM/DD
+	- Added function kick(user, reason="")
